[package]
name = "rsq"
version = "0.1.0"
authors = ["Joshua Zeldin <joshzeldin1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }